--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -3,13 +3,13 @@
   "version": "2.0.0",
   "description": "",
   "engines": {
-    "node": "14.15"
+    "node": "16.15.1"
   },
   "main": "server.ts",
   "scripts": {
     "start": "node ./server.js",
     "tsc": "npx tsc",
-    "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "dev": "npx ts-node-dev --respawn --transpileOnly ./src/server.ts",
     "prod": "npx tsc && node ./server.js",
     "clean": "rm -rf www/ || true",
     "deploy": "npm run build && eb list && eb use udagram-api-dev && eb deploy && eb setenv PORT=$PORT DB_PORT=$DB_PORT POSTGRES_USERNAME=$POSTGRES_USERNAME POSTGRES_PASSWORD=$POSTGRES_PASSWORD POSTGRES_DB=$POSTGRES_DB POSTGRES_HOST=$POSTGRES_HOST RDS_DIALECT=$RDS_DIALECT AWS_REGION=$AWS_REGION JWT_SECRET=$JWT_SECRET",
